<resources>
    <string name="app_name">SamsmuApp</string>
    <string name="title_users">Пациенты</string>
    <string name="title_favorite">Избранное</string>
    <string name="action_muscules">Назначение мышц</string>
    <string name="action_settings">Настройки</string>
    <string name="action_close">Закрыть</string>
    <string name="sensor_1">Сенсор 1</string>
    <string name="sensor_2">Сенсор 2</string>
    <string name="sensor_3">Сенсор 3</string>
    <string name="sensor_4">Сенсор 4</string>
    <string name="sensor_5">Сенсор 5</string>
    <string name="sensor_6">Сенсор 6</string>
    <string name="sensor_7">Сенсор 7</string>
    <string name="sensor_8">Сенсор 8</string>
    <string name="Biceps">Biceps</string>
    <string name="Triceps">Triceps</string>
    <string name="Deltoid">Deltoid</string>
    <string name="Pectoralis">Pectoralis</string>
    <string name="Quadriceps">Quadriceps</string>
    <string name="Hamstrings">Hamstrings</string>
    <string name="Calf">Calf</string>
    <string name="Trapezius">Trapezius</string>
    <string-array name="muscles">
        <item>@string/Triceps</item>
        <item>@string/Deltoid</item>
        <item>@string/Pectoralis</item>
        <item>@string/Quadriceps</item>
        <item>@string/Hamstrings</item>
        <item>@string/Calf</item>
        <item>@string/Trapezius</item>
    </string-array>
    <string name="save">Сохранить</string>
    <string name="age">Возраст</string>
    <string name="option_delete">Удалить</string>
    <string name="avatar_description">avatar</string>
    <string name="hint_search">Поиск...</string>
    <string name="delete_dialog_title">Хотите удалить записи?</string>
    <string name="deletion_message">Выбранные записи больше не будут доступны в избранном</string>
    <string name="dialog_button_yes">Да</string>
    <string name="dialog_button_no">Нет</string>
    <string name="added_to_favourites">Добавлено в избранное</string>
    <string name="removed_from_favourites">Удалено из избранных</string>
    <string name="action_favourite">Добавить в избранное</string>
    <string name="empty_list">List is empty</string>
    <string name="try_again">Try Again</string>
</resources>