<?xml version="1.0" encoding="utf-8"?>
<!--
  © Panov Vitaly 2025 - All Rights Reserved

  Unauthorized copying of this file, via any medium is strictly prohibited
  Proprietary and confidential
  Written by Panov Vitaly 8 Jun 2025
-->

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="HardcodedText">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/card_view_save_btn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/textViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_muscules"/>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/white">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/content_margin"
                    android:layout_marginBottom="@dimen/content_margin"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatSpinner
                        android:id="@+id/auto_complete_sensor_1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/content_margin"
                        android:layout_marginEnd="@dimen/content_margin"
                        android:layout_marginTop="@dimen/content_margin_min"
                        android:layout_marginBottom="@dimen/content_margin_min"
                        android:spinnerMode="dropdown"
                        android:hint="@string/sensor_1"/>

                    <androidx.appcompat.widget.AppCompatSpinner
                        android:id="@+id/auto_complete_sensor_2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/content_margin"
                        android:layout_marginEnd="@dimen/content_margin"
                        android:layout_marginTop="@dimen/content_margin_min"
                        android:layout_marginBottom="@dimen/content_margin_min"
                        android:spinnerMode="dropdown"
                        android:hint="@string/sensor_2"/>

                    <androidx.appcompat.widget.AppCompatSpinner
                        android:id="@+id/auto_complete_sensor_3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/content_margin"
                        android:layout_marginEnd="@dimen/content_margin"
                        android:layout_marginTop="@dimen/content_margin_min"
                        android:layout_marginBottom="@dimen/content_margin_min"
                        android:spinnerMode="dropdown"
                        android:hint="@string/sensor_3"/>

                    <androidx.appcompat.widget.AppCompatSpinner
                        android:id="@+id/auto_complete_sensor_4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/content_margin"
                        android:layout_marginEnd="@dimen/content_margin"
                        android:layout_marginTop="@dimen/content_margin_min"
                        android:layout_marginBottom="@dimen/content_margin_min"
                        android:spinnerMode="dropdown"
                        android:hint="@string/sensor_4"/>

                    <androidx.appcompat.widget.AppCompatSpinner
                        android:id="@+id/auto_complete_sensor_5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/content_margin"
                        android:layout_marginEnd="@dimen/content_margin"
                        android:layout_marginTop="@dimen/content_margin_min"
                        android:layout_marginBottom="@dimen/content_margin_min"
                        android:spinnerMode="dropdown"
                        android:hint="@string/sensor_5"/>

                    <androidx.appcompat.widget.AppCompatSpinner
                        android:id="@+id/auto_complete_sensor_6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/content_margin"
                        android:layout_marginEnd="@dimen/content_margin"
                        android:layout_marginTop="@dimen/content_margin_min"
                        android:layout_marginBottom="@dimen/content_margin_min"
                        android:spinnerMode="dropdown"
                        android:hint="@string/sensor_6"/>

                    <androidx.appcompat.widget.AppCompatSpinner
                        android:id="@+id/auto_complete_sensor_7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/content_margin"
                        android:layout_marginEnd="@dimen/content_margin"
                        android:layout_marginTop="@dimen/content_margin_min"
                        android:layout_marginBottom="@dimen/content_margin_min"
                        android:spinnerMode="dropdown"
                        android:hint="@string/sensor_7"/>

                    <androidx.appcompat.widget.AppCompatSpinner
                        android:id="@+id/auto_complete_sensor_8"
                        android:layout_marginStart="@dimen/content_margin"
                        android:layout_marginEnd="@dimen/content_margin"
                        android:layout_marginTop="@dimen/content_margin_min"
                        android:layout_marginBottom="@dimen/content_margin_min"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:spinnerMode="dropdown"
                        android:hint="@string/sensor_8" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_save_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:cardBackgroundColor="@color/white">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/save_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/content_margin"
            android:text="@string/save" />

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>